--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
   },
   "homepage": "https://github.com/mj1618/serverless-offline-sns#readme",
   "dependencies": {
-    "aws-sdk": "^2.403.0",
+    "aws-sdk": "^2.1081.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
-    "lodash": "^4.17.4",
-    "node-fetch": "^1.7.3",
+    "lodash": "^4.17.21",
+    "node-fetch": "2.6.7",
     "uuid": "^3.1.0",
     "xml": "^1.0.1"
   },
@@ -46,9 +46,8 @@
     "@types/mocha": "^2.2.43",
     "@types/node": "^8.0.25",
     "chai": "^4.1.2",
-    "istanbul": "^0.4.5",
-    "mocha": "^6.0.1",
-    "nyc": "^11.2.1",
+    "mocha": "^9.2.1",
+    "nyc": "15.1.0",
     "source-map-support": "^0.4.18",
     "ts-loader": "^2.3.7",
     "ts-mocha": "^1.0.3",
